--- a/untitled_app/ios/Podfile
+++ b/untitled_app/ios/Podfile
@@ -31,6 +31,10 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # TODO: try deleting podfile lock
+  # Improve iOS & macOS build times by including the pre-compiled framework
+  pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '8.15.0'
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
     inherit! :search_paths
