--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: any
   google_sign_in: ^6.1.4
   cloud_firestore: ^4.8.3
+  image_picker: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
