--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   google_sign_in: ^6.1.4
   cloud_firestore: ^4.8.3
   image_picker: ^1.0.1
-
+  image_cropper: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
