--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.8.3
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
+  firebase_storage: ^11.2.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
