--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^11.2.5
   provider: ^6.0.5
   get_it: ^7.6.0
+  cached_network_image: ^3.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
