--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider: ^6.0.5
   get_it: ^7.6.0
   cached_network_image: ^3.2.3
+  go_router: ^10.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
