--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get_it: ^7.6.0
   cached_network_image: ^3.2.3
   go_router: ^10.1.0
+  shimmer: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
