--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cached_network_image: ^3.2.3
   go_router: ^10.1.0
   shimmer: ^3.0.0
+  collection: ^1.17.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
