--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  algolia: ^1.1.2
+    
+  algolia_helper_flutter: ^0.5.0
+  infinite_scroll_pagination: ^3.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -66,8 +68,6 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-dependency_overrides:
-  http: ^1.0.0
 
 
 # The following section is specific to Flutter packages.
