--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.15.0
   firebase_analytics: ^10.4.4
-  firebase_auth: ^4.7.1
+  # firebase_auth: ^4.7.1
+  firebase_auth: ^4.10.1
   flutter_localizations:
     sdk: flutter
   intl: any
