--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
     
-  algolia_helper_flutter: ^0.5.0
+  http: ^1.1.0
   
 
   # The following adds the Cupertino Icons font to your application.
