--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
     
   http: ^1.1.0
-  
+  giphy_get: ^3.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
