--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
     
   http: ^1.1.0
-  giphy_get: ^3.5.0
+  giphy_get: ^3.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +55,8 @@ dependencies:
   shimmer: ^3.0.0
   collection: ^1.17.1
   shared_preferences: ^2.2.0
+  firebase_messaging: ^14.7.1
+  extended_image: ^8.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
