--- a/untitled_app/ios/Runner/Info.plist
+++ b/untitled_app/ios/Runner/Info.plist
@@ -58,5 +58,8 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>FirebaseMessagingAutoInitEnabled</key>
+	<false/>
+
 </dict>
 </plist>
