--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   shared_preferences: ^2.2.0
   firebase_messaging: ^14.7.1
   extended_image: ^8.0.2
+  permission_handler: ^11.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
