--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   firebase_messaging: ^14.7.1
   extended_image: ^8.0.2
   permission_handler: ^11.0.1
+  cloud_functions: ^4.5.2
+  flutter_local_notifications: ^16.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
