--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
-    "cmake.sourceDirectory": "C:/Users/ereec/Documents/GitHub/untitled/untitled_app/giphy_get-custom/example/linux"
+    "cmake.sourceDirectory": "C:/Users/ereec/Documents/GitHub/untitled/untitled_app/giphy_get-custom/example/linux",
+    "debug.toolBarLocation": "commandCenter"
 }
