--- a/untitled_app/ios/Podfile
+++ b/untitled_app/ios/Podfile
@@ -32,7 +32,7 @@ target 'Runner' do
   use_modular_headers!
 
   # Improve iOS & macOS build times by including the pre-compiled framework
-  pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '10.18.0'
+  # pod 'FirebaseFirestore', :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git', :tag => '10.18.0'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
