--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.13+13
+version: 1.0.14+14
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -64,6 +64,7 @@ dependencies:
   flutter_local_notifications: ^16.1.0
   giphy_get:
     path: ./giphy_get-custom/
+  emoji_picker_flutter: ^1.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
