--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -66,9 +66,12 @@ dependencies:
     path: ./giphy_get-custom/
   emoji_picker_flutter: ^1.6.3
   flutter_hooks: ^0.20.3
+  #idk if this does anything
+  flutter_native_splash: ^2.3.7
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  
+  # flutter_test:
+  #   sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -79,9 +82,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
-
-
+#idk if this does anything
+flutter_native_splash:
+  color: "#42a5f5"
+  android_12:  "#42a5f5"
 # The following section is specific to Flutter packages.
 flutter:
   generate: true
