--- a/untitled_app/ios/Podfile
+++ b/untitled_app/ios/Podfile
@@ -40,8 +40,24 @@ target 'Runner' do
   end
 end
 
+# uncomment for not using ccache
+# post_install do |installer|
+#   installer.pods_project.targets.each do |target|
+#     flutter_additional_ios_build_settings(target)
+#   end
+
+# comment this for not using ccache
 post_install do |installer|
+  # react_native_post_install(installer)
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      # Using the un-qualified names means you can swap in different implementations, for example ccache
+      config.build_settings["CC"] = "clang"
+      config.build_settings["LD"] = "clang"
+      config.build_settings["CXX"] = "clang++"
+      config.build_settings["LDPLUSPLUS"] = "clang++"
+    end
   end
+  # __apply_Xcode_12_5_M1_post_install_workaround(installer)
 end
