--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   #idk if this does anything
   flutter_native_splash: ^2.3.7
   universal_html: ^2.2.4
+  like_button: ^2.0.5
 dev_dependencies:
   
   # flutter_test:
