--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "vscode-pets.theme": "castle",
-    "vscode-pets.petSize": "large",
+    "vscode-pets.petSize": "small",
     "vscode-pets.petColor": "black",
     "vscode-pets.petType": "dog",
     "vscode-pets.throwBallWithMouse": true
