--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.20+20
+version: 1.0.21+21
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.2.2
   firebase_in_app_messaging: ^0.7.4+6
   overlay_support: ^2.1.0
+  package_info_plus: ^5.0.1
   share_plus: ^7.2.1
   image_picker: ^1.0.1
   image_cropper: ^5.0.0
