--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   universal_html: ^2.2.4
   like_button: 
     path: ./like_button-custom/
+  firebase_app_check: ^0.2.1+8
 dev_dependencies:
   
   # flutter_test:
