--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   intl: any
   get_it: ^7.6.4
   flutter_svg: ^2.0.9
-  qr_flutter: ^4.1.0
+  qr_flutter_new: ^1.0.2
   cloud_firestore: ^4.13.3
   url_launcher: ^6.2.2
   firebase_in_app_messaging: ^0.7.4+6
@@ -58,6 +58,8 @@ dependencies:
   image_cropper: ^5.0.0
   firebase_storage: ^11.2.5
   provider: ^6.0.5
+  # remove
+  google_fonts: ^6.1.0
   cached_network_image: ^3.2.3
   go_router: ^12.1.1
   shimmer: ^3.0.0
@@ -105,5 +107,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+
+
 
 
