--- a/untitled_app/pubspec.yaml
+++ b/untitled_app/pubspec.yaml
@@ -58,9 +58,8 @@ dependencies:
   image_cropper: ^5.0.0
   firebase_storage: ^11.2.5
   provider: ^6.0.5
-  # remove
-  google_fonts: ^6.1.0
   cached_network_image: ^3.2.3
+  path_provider: ^2.1.2
   go_router: ^12.1.1
   shimmer: ^3.0.0
   collection: ^1.17.1
