changed android url

--- a/untitled_app/android/app/src/main/AndroidManifest.xml
+++ b/untitled_app/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="untitled-2832f.web.app" />
+                <data android:scheme="http" android:host="www.eko-app.com" />
                 <data android:scheme="https" />
             </intent-filter>
 
