links accessible without auth

--- a/untitled_app/ios/Runner/Runner.entitlements
+++ b/untitled_app/ios/Runner/Runner.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:untitled-2832f.web.app</string>
+		<string>applinks:www.eko-app.com</string>
 	</array>
 </dict>
 </plist>
