--- a/untitled_app/l10n.yaml
+++ b/untitled_app/l10n.yaml
@@ -3,3 +3,4 @@ template-arb-file: app_en.arb
 output-dir: lib\localization\generated
 output-localization-file: app_localizations.dart
 synthetic-package: false
+untranslated-messages-file: untranslated.json
